syntax = "proto3";

option go_package = "github.com/superj80820/system-design/domain";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package domain;

service Auth {
	rpc Verify(VerifyRequest) returns (VerifyReply);
}

message VerifyRequest {
  string accessToken = 1;
}

message VerifyReply {
  int64 userID = 1;
}
